Avg Sun Tzu Quote

--- a/research.ipynb
+++ b/research.ipynb
@@ -717,6 +717,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Dates', 'A ', 'Unnamed: 2', 'Unnamed: 3', 'AAPL ', 'Unnamed: 5',\n",
+       "       'Unnamed: 6', 'ABBV ', 'Unnamed: 8', 'Unnamed: 9',\n",
+       "       ...\n",
+       "       'Unnamed: 1506', 'ZBRA ', 'Unnamed: 1508', 'Unnamed: 1509', 'ZTS ',\n",
+       "       'Unnamed: 1511', 'Unnamed: 1512', 'Total_Capitalization', 'Sum_Mag7',\n",
+       "       'Mag7_Ret Cap weighted'],\n",
+       "      dtype='object', length=1516)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data_weights_sp500 = pd.read_csv(\"SP500_returns_output.csv\")\n",
+    "data_weights_sp500.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
