--- a/strategy.ipynb
+++ b/strategy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,8 @@
       "Dep. Variable:                  SP600   R-squared:                       0.484\n",
       "Model:                            OLS   Adj. R-squared:                  0.480\n",
       "Method:                 Least Squares   F-statistic:                     115.3\n",
-      "Date:                Tue, 28 Jan 2025   Prob (F-statistic):           2.22e-19\n",
-      "Time:                        16:29:42   Log-Likelihood:                 412.73\n",
+      "Date:                Wed, 29 Jan 2025   Prob (F-statistic):           2.22e-19\n",
+      "Time:                        12:57:28   Log-Likelihood:                 412.73\n",
       "No. Observations:                 125   AIC:                            -821.5\n",
       "Df Residuals:                     123   BIC:                            -815.8\n",
       "Df Model:                           1                                         \n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
       "Dep. Variable:                  SP600   R-squared:                       0.695\n",
       "Model:                            OLS   Adj. R-squared:                  0.690\n",
       "Method:                 Least Squares   F-statistic:                     138.9\n",
-      "Date:                Tue, 28 Jan 2025   Prob (F-statistic):           3.61e-32\n",
-      "Time:                        16:39:58   Log-Likelihood:                 445.58\n",
+      "Date:                Wed, 29 Jan 2025   Prob (F-statistic):           3.61e-32\n",
+      "Time:                        13:03:22   Log-Likelihood:                 445.58\n",
       "No. Observations:                 125   AIC:                            -885.2\n",
       "Df Residuals:                     122   BIC:                            -876.7\n",
       "Df Model:                           2                                         \n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,8 +290,8 @@
       "Dep. Variable:                  SP600   R-squared:                       0.484\n",
       "Model:                            OLS   Adj. R-squared:                  0.480\n",
       "Method:                 Least Squares   F-statistic:                     115.3\n",
-      "Date:                Tue, 28 Jan 2025   Prob (F-statistic):           2.22e-19\n",
-      "Time:                        16:48:57   Log-Likelihood:                 412.73\n",
+      "Date:                Wed, 29 Jan 2025   Prob (F-statistic):           2.22e-19\n",
+      "Time:                        13:10:33   Log-Likelihood:                 412.73\n",
       "No. Observations:                 125   AIC:                            -821.5\n",
       "Df Residuals:                     123   BIC:                            -815.8\n",
       "Df Model:                           1                                         \n",
@@ -317,8 +317,8 @@
       "Dep. Variable:                  SP600   R-squared:                       0.695\n",
       "Model:                            OLS   Adj. R-squared:                  0.690\n",
       "Method:                 Least Squares   F-statistic:                     138.9\n",
-      "Date:                Tue, 28 Jan 2025   Prob (F-statistic):           3.61e-32\n",
-      "Time:                        16:48:57   Log-Likelihood:                 445.58\n",
+      "Date:                Wed, 29 Jan 2025   Prob (F-statistic):           3.61e-32\n",
+      "Time:                        13:10:33   Log-Likelihood:                 445.58\n",
       "No. Observations:                 125   AIC:                            -885.2\n",
       "Df Residuals:                     122   BIC:                            -876.7\n",
       "Df Model:                           2                                         \n",
@@ -408,7 +408,7 @@
     "beta_mag7  = model2.params[\"Mag7\"]\n",
     "\n",
     "# Strategy B daily returns\n",
-    "stratB_returns = df[\"SP600\"] - beta_sp500 * df[\"SP500\"] - beta_mag7 * df[\"Mag7\"]\n",
+    "stratB_returns = df[\"SP600\"] - beta_sp500 * df[\"SP500\"] - 1*beta_mag7 * df[\"Mag7\"]\n",
     "\n",
     "print(\"=== Strategy A Regression ===\")\n",
     "print(model1.summary())\n",
@@ -468,10 +468,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.007999089545796149"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.280205365056003"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_sp500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   Mag7   R-squared:                       0.774\n",
+      "Model:                            OLS   Adj. R-squared:                  0.773\n",
+      "Method:                 Least Squares   F-statistic:                     422.2\n",
+      "Date:                Wed, 29 Jan 2025   Prob (F-statistic):           1.39e-41\n",
+      "Time:                        13:14:25   Log-Likelihood:                -134.91\n",
+      "No. Observations:                 125   AIC:                             273.8\n",
+      "Df Residuals:                     123   BIC:                             279.5\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.0465      0.064      0.723      0.471      -0.081       0.174\n",
+      "SP500        156.8502      7.634     20.547      0.000     141.740     171.961\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.590   Durbin-Watson:                   1.781\n",
+      "Prob(Omnibus):                  0.452   Jarque-Bera (JB):                1.168\n",
+      "Skew:                           0.040   Prob(JB):                        0.558\n",
+      "Kurtosis:                       3.467   Cond. No.                         119.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X1 = sm.add_constant(df[\"SP500\"])\n",
+    "y1 = df[\"Mag7\"]\n",
+    "model1 = sm.OLS(y1, X1).fit()\n",
+    "beta_sp500_only = model1.params[\"SP500\"]\n",
+    "print(model1.summary())\n"
+   ]
   },
   {
    "cell_type": "code",
