Initial Beta Testing AGAIN LOL

--- a/beta_testing.ipynb
+++ b/beta_testing.ipynb
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "main_df = pd.read_csv(\"bbg_data.csv\", index_col=0)\n",
+    "main_df = pd.read_csv(\"Data/bbg_data.csv\", index_col=0)\n",
     "\n",
     "main_df"
    ]
