Starting on clustering for SPX ex. Mag7

--- a/beta_testing.ipynb
+++ b/beta_testing.ipynb
@@ -2579,10 +2579,428 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A_return</th>\n",
+       "      <th>ABBV_return</th>\n",
+       "      <th>ABNB_return</th>\n",
+       "      <th>ABT_return</th>\n",
+       "      <th>ACGL_return</th>\n",
+       "      <th>ACN_return</th>\n",
+       "      <th>ADBE_return</th>\n",
+       "      <th>ADI_return</th>\n",
+       "      <th>ADM_return</th>\n",
+       "      <th>ADP_return</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WTW_return</th>\n",
+       "      <th>WY_return</th>\n",
+       "      <th>WYNN_return</th>\n",
+       "      <th>XEL_return</th>\n",
+       "      <th>XOM_return</th>\n",
+       "      <th>XYL_return</th>\n",
+       "      <th>YUM_return</th>\n",
+       "      <th>ZBH_return</th>\n",
+       "      <th>ZBRA_return</th>\n",
+       "      <th>ZTS_return</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>-1.0394</td>\n",
+       "      <td>-1.2971</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.4664</td>\n",
+       "      <td>-0.8389</td>\n",
+       "      <td>-0.9757</td>\n",
+       "      <td>-0.5268</td>\n",
+       "      <td>-0.0630</td>\n",
+       "      <td>-1.6827</td>\n",
+       "      <td>-0.8798</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.5093</td>\n",
+       "      <td>-1.6138</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.6128</td>\n",
+       "      <td>-0.9368</td>\n",
+       "      <td>-0.5868</td>\n",
+       "      <td>-1.0038</td>\n",
+       "      <td>-1.1619</td>\n",
+       "      <td>-0.7382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>-0.9282</td>\n",
+       "      <td>0.6877</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.2665</td>\n",
+       "      <td>-1.0321</td>\n",
+       "      <td>-0.5263</td>\n",
+       "      <td>-0.4952</td>\n",
+       "      <td>0.0360</td>\n",
+       "      <td>0.0385</td>\n",
+       "      <td>-0.0960</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.6130</td>\n",
+       "      <td>-1.2571</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.4110</td>\n",
+       "      <td>0.0263</td>\n",
+       "      <td>-0.6863</td>\n",
+       "      <td>-0.7318</td>\n",
+       "      <td>0.0258</td>\n",
+       "      <td>0.6507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>-1.8738</td>\n",
+       "      <td>-1.8819</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0223</td>\n",
+       "      <td>-0.5984</td>\n",
+       "      <td>-1.6884</td>\n",
+       "      <td>-0.4976</td>\n",
+       "      <td>-1.8275</td>\n",
+       "      <td>-3.4602</td>\n",
+       "      <td>-0.0720</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>-1.7020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.7362</td>\n",
+       "      <td>-6.2237</td>\n",
+       "      <td>-2.0318</td>\n",
+       "      <td>3.7303</td>\n",
+       "      <td>-1.4077</td>\n",
+       "      <td>-0.6003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>-1.5578</td>\n",
+       "      <td>-0.4950</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.1356</td>\n",
+       "      <td>0.2236</td>\n",
+       "      <td>-0.7213</td>\n",
+       "      <td>-2.0144</td>\n",
+       "      <td>-2.3384</td>\n",
+       "      <td>-1.9713</td>\n",
+       "      <td>-0.8350</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.1108</td>\n",
+       "      <td>-2.1331</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.5316</td>\n",
+       "      <td>-0.5881</td>\n",
+       "      <td>-1.2274</td>\n",
+       "      <td>-0.8477</td>\n",
+       "      <td>-0.7205</td>\n",
+       "      <td>-0.9756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>1.3272</td>\n",
+       "      <td>4.0417</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.8108</td>\n",
+       "      <td>0.5835</td>\n",
+       "      <td>2.0990</td>\n",
+       "      <td>0.8223</td>\n",
+       "      <td>1.0516</td>\n",
+       "      <td>1.5031</td>\n",
+       "      <td>0.8784</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3050</td>\n",
+       "      <td>2.9368</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0133</td>\n",
+       "      <td>0.7887</td>\n",
+       "      <td>3.3138</td>\n",
+       "      <td>2.4870</td>\n",
+       "      <td>2.5465</td>\n",
+       "      <td>2.0643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-23</th>\n",
+       "      <td>-0.0983</td>\n",
+       "      <td>0.8688</td>\n",
+       "      <td>0.5585</td>\n",
+       "      <td>4.6188</td>\n",
+       "      <td>-0.2038</td>\n",
+       "      <td>1.1556</td>\n",
+       "      <td>-0.0091</td>\n",
+       "      <td>1.9056</td>\n",
+       "      <td>0.2771</td>\n",
+       "      <td>-0.1890</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.5208</td>\n",
+       "      <td>0.6048</td>\n",
+       "      <td>-0.0939</td>\n",
+       "      <td>-1.3735</td>\n",
+       "      <td>0.5661</td>\n",
+       "      <td>-0.0493</td>\n",
+       "      <td>0.6259</td>\n",
+       "      <td>1.1757</td>\n",
+       "      <td>0.1284</td>\n",
+       "      <td>0.1980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-24</th>\n",
+       "      <td>-0.6625</td>\n",
+       "      <td>-0.2168</td>\n",
+       "      <td>-4.6157</td>\n",
+       "      <td>1.4689</td>\n",
+       "      <td>-0.2795</td>\n",
+       "      <td>-0.2340</td>\n",
+       "      <td>-0.4345</td>\n",
+       "      <td>-4.8084</td>\n",
+       "      <td>-0.2961</td>\n",
+       "      <td>0.4395</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0564</td>\n",
+       "      <td>0.1670</td>\n",
+       "      <td>-0.1058</td>\n",
+       "      <td>0.8326</td>\n",
+       "      <td>-1.3527</td>\n",
+       "      <td>-0.0082</td>\n",
+       "      <td>0.9842</td>\n",
+       "      <td>-0.1802</td>\n",
+       "      <td>-1.5435</td>\n",
+       "      <td>0.9883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-27</th>\n",
+       "      <td>-0.3170</td>\n",
+       "      <td>3.8755</td>\n",
+       "      <td>1.4714</td>\n",
+       "      <td>3.5192</td>\n",
+       "      <td>4.0535</td>\n",
+       "      <td>2.9635</td>\n",
+       "      <td>0.7396</td>\n",
+       "      <td>-0.8971</td>\n",
+       "      <td>3.2865</td>\n",
+       "      <td>1.0266</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.1931</td>\n",
+       "      <td>2.8676</td>\n",
+       "      <td>-0.2589</td>\n",
+       "      <td>2.0718</td>\n",
+       "      <td>1.3897</td>\n",
+       "      <td>0.5018</td>\n",
+       "      <td>2.0505</td>\n",
+       "      <td>1.5973</td>\n",
+       "      <td>-3.6782</td>\n",
+       "      <td>2.6214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-28</th>\n",
+       "      <td>-0.4107</td>\n",
+       "      <td>-1.1815</td>\n",
+       "      <td>1.6207</td>\n",
+       "      <td>-1.5761</td>\n",
+       "      <td>-1.3572</td>\n",
+       "      <td>1.4043</td>\n",
+       "      <td>0.9667</td>\n",
+       "      <td>-2.7388</td>\n",
+       "      <td>-3.0286</td>\n",
+       "      <td>-0.6130</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.0229</td>\n",
+       "      <td>-0.2593</td>\n",
+       "      <td>-0.5191</td>\n",
+       "      <td>-2.2945</td>\n",
+       "      <td>-1.9334</td>\n",
+       "      <td>-0.6875</td>\n",
+       "      <td>-1.2606</td>\n",
+       "      <td>-0.6395</td>\n",
+       "      <td>1.5600</td>\n",
+       "      <td>-1.5084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-29</th>\n",
+       "      <td>-1.8691</td>\n",
+       "      <td>0.7265</td>\n",
+       "      <td>2.0603</td>\n",
+       "      <td>1.0126</td>\n",
+       "      <td>-0.1050</td>\n",
+       "      <td>-0.5206</td>\n",
+       "      <td>0.1761</td>\n",
+       "      <td>0.9546</td>\n",
+       "      <td>2.0162</td>\n",
+       "      <td>3.2751</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1196</td>\n",
+       "      <td>0.0325</td>\n",
+       "      <td>0.5218</td>\n",
+       "      <td>0.3312</td>\n",
+       "      <td>0.3610</td>\n",
+       "      <td>0.8324</td>\n",
+       "      <td>0.6190</td>\n",
+       "      <td>-0.3129</td>\n",
+       "      <td>-0.9172</td>\n",
+       "      <td>0.2347</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2630 rows × 495 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            A_return  ABBV_return  ABNB_return  ABT_return  ACGL_return  \\\n",
+       "2015-01-01   -1.0394      -1.2971          NaN     -1.4664      -0.8389   \n",
+       "2015-01-02   -0.9282       0.6877          NaN     -0.2665      -1.0321   \n",
+       "2015-01-05   -1.8738      -1.8819          NaN      0.0223      -0.5984   \n",
+       "2015-01-06   -1.5578      -0.4950          NaN     -1.1356       0.2236   \n",
+       "2015-01-07    1.3272       4.0417          NaN      0.8108       0.5835   \n",
+       "...              ...          ...          ...         ...          ...   \n",
+       "2025-01-23   -0.0983       0.8688       0.5585      4.6188      -0.2038   \n",
+       "2025-01-24   -0.6625      -0.2168      -4.6157      1.4689      -0.2795   \n",
+       "2025-01-27   -0.3170       3.8755       1.4714      3.5192       4.0535   \n",
+       "2025-01-28   -0.4107      -1.1815       1.6207     -1.5761      -1.3572   \n",
+       "2025-01-29   -1.8691       0.7265       2.0603      1.0126      -0.1050   \n",
+       "\n",
+       "            ACN_return  ADBE_return  ADI_return  ADM_return  ADP_return  ...  \\\n",
+       "2015-01-01     -0.9757      -0.5268     -0.0630     -1.6827     -0.8798  ...   \n",
+       "2015-01-02     -0.5263      -0.4952      0.0360      0.0385     -0.0960  ...   \n",
+       "2015-01-05     -1.6884      -0.4976     -1.8275     -3.4602     -0.0720  ...   \n",
+       "2015-01-06     -0.7213      -2.0144     -2.3384     -1.9713     -0.8350  ...   \n",
+       "2015-01-07      2.0990       0.8223      1.0516      1.5031      0.8784  ...   \n",
+       "...                ...          ...         ...         ...         ...  ...   \n",
+       "2025-01-23      1.1556      -0.0091      1.9056      0.2771     -0.1890  ...   \n",
+       "2025-01-24     -0.2340      -0.4345     -4.8084     -0.2961      0.4395  ...   \n",
+       "2025-01-27      2.9635       0.7396     -0.8971      3.2865      1.0266  ...   \n",
+       "2025-01-28      1.4043       0.9667     -2.7388     -3.0286     -0.6130  ...   \n",
+       "2025-01-29     -0.5206       0.1761      0.9546      2.0162      3.2751  ...   \n",
+       "\n",
+       "            WTW_return  WY_return  WYNN_return  XEL_return  XOM_return  \\\n",
+       "2015-01-01         NaN    -1.5093      -1.6138         NaN     -0.6128   \n",
+       "2015-01-02         NaN     0.6130      -1.2571         NaN      0.4110   \n",
+       "2015-01-05         NaN     0.0000      -1.7020         NaN     -2.7362   \n",
+       "2015-01-06         NaN    -0.1108      -2.1331         NaN     -0.5316   \n",
+       "2015-01-07         NaN     0.3050       2.9368         NaN      1.0133   \n",
+       "...                ...        ...          ...         ...         ...   \n",
+       "2025-01-23     -0.5208     0.6048      -0.0939     -1.3735      0.5661   \n",
+       "2025-01-24      1.0564     0.1670      -0.1058      0.8326     -1.3527   \n",
+       "2025-01-27      2.1931     2.8676      -0.2589      2.0718      1.3897   \n",
+       "2025-01-28     -1.0229    -0.2593      -0.5191     -2.2945     -1.9334   \n",
+       "2025-01-29      0.1196     0.0325       0.5218      0.3312      0.3610   \n",
+       "\n",
+       "            XYL_return  YUM_return  ZBH_return  ZBRA_return  ZTS_return  \n",
+       "2015-01-01     -0.9368     -0.5868     -1.0038      -1.1619     -0.7382  \n",
+       "2015-01-02      0.0263     -0.6863     -0.7318       0.0258      0.6507  \n",
+       "2015-01-05     -6.2237     -2.0318      3.7303      -1.4077     -0.6003  \n",
+       "2015-01-06     -0.5881     -1.2274     -0.8477      -0.7205     -0.9756  \n",
+       "2015-01-07      0.7887      3.3138      2.4870       2.5465      2.0643  \n",
+       "...                ...         ...         ...          ...         ...  \n",
+       "2025-01-23     -0.0493      0.6259      1.1757       0.1284      0.1980  \n",
+       "2025-01-24     -0.0082      0.9842     -0.1802      -1.5435      0.9883  \n",
+       "2025-01-27      0.5018      2.0505      1.5973      -3.6782      2.6214  \n",
+       "2025-01-28     -0.6875     -1.2606     -0.6395       1.5600     -1.5084  \n",
+       "2025-01-29      0.8324      0.6190     -0.3129      -0.9172      0.2347  \n",
+       "\n",
+       "[2630 rows x 495 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xms_df = pd.read_csv(\"Data/spx_const_data.csv\", index_col=0)\n",
+    "xms_df = xms_df[xms_df.columns[2::3]]\n",
+    "xms_df.drop(columns=[\"MRP-W_return\"], inplace=True)\n",
+    "\n",
+    "xms_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "495"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clustering_start = \"2024-01-01\"\n",
+    "clusters = 3\n",
+    "\n",
+    "xms_corr = xms_df[clustering_start:].corr()\n",
+    "xms_dist = 1 - xms_corr\n",
+    "\n",
+    "clusters = KMeans(n_clusters=clusters).fit_predict(xms_dist)\n",
+    "\n",
+    "len(clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xms_dist.to_csv(\"test.csv\")"
+   ]
   }
  ],
  "metadata": {
